cmake_minimum_required(VERSION 2.8)

unset(CMAKE_MODULE_PATH)

include_directories(include)

if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
  add_definitions(-Wno-c++11-narrowing)
endif()

if(BUNDLED_GLEW)
  add_definitions(-DGLEW_STATIC)
  set(GLEW_LIB glew)
  set(GLEW_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../glew/glew/include)
endif()

if(BUNDLED_ZLIB)
  set(MINIZIP_LIB minizip)
  set(MINIZIP_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../zlib/zlib)
endif()

set(RAPIDXML_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(GLM_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include/glm)

set(CEGUI_HAS_FREETYPE ON)
set(CEGUI_HAS_PCRE_REGEX OFF)
set(CEGUI_HAS_MINIZIP_RESOURCE_PROVIDER OFF)
set(CEGUI_HAS_DEFAULT_LOGGER ON)
set(CEGUI_USE_FRIBIDI OFF)
set(CEGUI_USE_MINIBIDI OFF)
set(CEGUI_STRING_CLASS 2) # std::string without custom allocation
set(CEGUI_CUSTOM_ALLOCATORS OFF)
set(CEGUI_CUSTOM_ALLOCATORS_DEBUG OFF)
set(CEGUI_CUSTOM_ALLOCATORS_INCLUDE OFF)
set(CEGUI_BUILD_STATIC_CONFIGURATION OFF)
set(CEGUI_BUILD_SHARED_LIBS_WITH_STATIC_DEPENDENCIES ON)
set(CEGUI_BUILD_SUFFIX OFF)
set(CEGUI_BUILD_TESTS OFF)

set(CEGUI_BUILD_RENDERER_OPENGL ON)
set(CEGUI_BUILD_RENDERER_OPENGL3 ON)
set(CEGUI_BUILD_RENDERER_OGRE OFF)
set(CEGUI_BUILD_RENDERER_IRRLICHT OFF)
set(CEGUI_BUILD_RENDERER_DIRECTFB OFF)
set(CEGUI_BUILD_RENDERER_DIRECT3D9 OFF)
set(CEGUI_BUILD_RENDERER_DIRECT3D10 OFF)
set(CEGUI_BUILD_RENDERER_DIRECT3D11 OFF)
set(CEGUI_BUILD_RENDERER_NULL OFF)
set(CEGUI_BUILD_RENDERER_OPENGLES OFF)

set(CEGUI_BUILD_XMLPARSER_EXPAT OFF)
set(CEGUI_BUILD_XMLPARSER_XERCES OFF)
set(CEGUI_BUILD_XMLPARSER_LIBXML2 OFF)
set(CEGUI_BUILD_XMLPARSER_RAPIDXML ON)
set(CEGUI_BUILD_XMLPARSER_TINYXML OFF)
set(CEGUI_OPTION_DEFAULT_XMLPARSER "RapidXMLParser")

set(CEGUI_BUILD_IMAGECODEC_SILLY OFF)
set(CEGUI_BUILD_IMAGECODEC_DEVIL OFF)
set(CEGUI_BUILD_IMAGECODEC_FREEIMAGE OFF)
set(CEGUI_BUILD_IMAGECODEC_CORONA OFF)

set(CEGUI_BUILD_IMAGECODEC_STB ON CACHE BOOL "Select to build with ImageCodec STB" FORCE)

set(CEGUI_BUILD_IMAGECODEC_TGA OFF)
set(CEGUI_BUILD_IMAGECODEC_PVR OFF)
set(CEGUI_OPTION_DEFAULT_IMAGECODEC "STBImageCodec")

set(CEGUI_STATIC_IMAGECODEC_MODULE ON)

set(CEGUI_BUILD_LUA_MODULE OFF)
set(CEGUI_BUILD_LUA_GENERATOR OFF)
set(CEGUI_OPTION_SAFE_LUA_MODULE OFF)
set(CEGUI_BUILD_PYTHON_MODULES OFF)

set(CEGUI_SAMPLES_ENABLED OFF)
set(CEGUI_SAMPLES_USE_OPENGL OFF)
set(CEGUI_SAMPLES_USE_OPENGL3 OFF)
set(CEGUI_SAMPLES_USE_OGRE OFF)
set(CEGUI_SAMPLES_USE_IRRLICHT OFF)
set(CEGUI_SAMPLES_USE_DIRECTFB OFF)
set(CEGUI_SAMPLES_USE_DIRECT3D9 OFF)
set(CEGUI_SAMPLES_USE_DIRECT3D10 OFF)
set(CEGUI_SAMPLES_USE_DIRECT3D11 OFF)
set(CEGUI_SAMPLES_USE_GTK2 OFF)

set(CEGUI_INSTALL_WITH_RPATH ON)

set(CEGUI_APPLE_DYLIB_INSTALL_PATH "@executable_path/../Frameworks")
set(CEGUI_APPLE_SYMLINK_DEPENDENCIES_TO_SAMPLE_APPS OFF)
set(CEGUI_APPLE_DYLIB_SET_VERSION_INFO OFF)

set(CEGUI_MSVC_STATIC_RUNTIME OFF)

add_subdirectory(CEGUI.git)
