cmake_minimum_required(VERSION 2.8)

unset(CMAKE_MODULE_PATH)

include_directories(include)

if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
  add_definitions(-Wno-c++11-narrowing -Wno-return-type-c-linkage)
endif()

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
	add_definitions(-Wno-non-virtual-dtor -Wno-switch)
endif()

if(BUNDLED_GLEW)
  add_definitions(-DGLEW_STATIC)
  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../glew/glew/include)

  set(GLEW_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../glew/glew/include)

  if(WIN32)
    set(GLEW_LIB glew opengl32 glu32)
    set(GLEW_LIB_STATIC glew opengl32 glu32)
    set(GLEW_LIB_STATIC_DBG glew opengl32 glu32)
  else()
    set(GLEW_LIB glew)
  endif()
endif()

if(BUNDLED_ZLIB)
  set(MINIZIP_LIB minizip)
  set(MINIZIP_LIB_STATIC minizip)
  set(MINIZIP_LIB_STATIC_DBG minizip)
  set(MINIZIP_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../zlib/zlib/)
endif()

if(BUNDLED_FREETYPE)
  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../freetype/freetype-2.5.5/include/)
  set(FREETYPE_H_PATH_ft2build ${CMAKE_CURRENT_SOURCE_DIR}/../freetype/freetype-2.5.5/include/ CACHE FILEPATH "Set path FREETYPE_H_PATH_ft2build" FORCE)
  set(FREETYPE_H_PATH_ftconfig ${CMAKE_CURRENT_SOURCE_DIR}/../freetype/freetype-2.5.5/include/config/ CACHE FILEPATH "Set path FREETYPE_H_PATH_ft2build" FORCE)
  set(FREETYPE_LIB freetype CACHE FILEPATH "Set path FREETYPE_LIB" FORCE)
  set(FREETYPE_LIB_STATIC freetype CACHE FILEPATH "Set path FREETYPE_LIB_STATIC" FORCE)
  set(FREETYPE_LIB_STATIC_DBG freetype CACHE FILEPATH "Set path FREETYPE_LIB_STATIC_DEBUG" FORCE)
endif()

if(MINGW)
  add_definitions(-D__USE_MINGW_ANSI_STDIO=1)
endif()

set(RAPIDXML_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(GLM_H_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include/glm)

set(CEGUI_HAS_FREETYPE ON CACHE BOOL "Select CEGUI_HAS_FREETYPE" FORCE)
set(CEGUI_HAS_PCRE_REGEX OFF CACHE BOOL "Select CEGUI_HAS_PCRE_REGEX" FORCE)
set(CEGUI_HAS_MINIZIP_RESOURCE_PROVIDER OFF CACHE BOOL "Select CEGUI_HAS_MINIZIP_RESOURCE_PROVIDER" FORCE)
set(CEGUI_HAS_DEFAULT_LOGGER ON CACHE BOOL "Select CEGUI_HAS_DEFAULT_LOGGER" FORCE)
set(CEGUI_USE_FRIBIDI OFF CACHE BOOL "Select CEGUI_USE_FRIBIDI" FORCE)
set(CEGUI_USE_MINIBIDI OFF CACHE BOOL "Select CEGUI_USE_MINIBIDI" FORCE)
set(CEGUI_STRING_CLASS 1) # CEGUI-internal Unicode strings
set(CEGUI_CUSTOM_ALLOCATORS OFF CACHE BOOL "Select CEGUI_CUSTOM_ALLOCATORS" FORCE)
set(CEGUI_CUSTOM_ALLOCATORS_DEBUG OFF CACHE BOOL "Select CEGUI_CUSTOM_ALLOCATORS_DEBUG" FORCE)
set(CEGUI_CUSTOM_ALLOCATORS_INCLUDE OFF CACHE BOOL "Select CEGUI_CUSTOM_ALLOCATORS_INCLUDE" FORCE)
set(CEGUI_BUILD_STATIC_CONFIGURATION OFF CACHE BOOL "Select CEGUI_BUILD_STATIC_CONFIGURATION" FORCE)
set(CEGUI_BUILD_SHARED_LIBS_WITH_STATIC_DEPENDENCIES ON CACHE BOOL "Select CEGUI_BUILD_SHARED_LIBS_WITH_STATIC_DEPENDENCIES" FORCE)
set(CEGUI_BUILD_SUFFIX OFF CACHE BOOL "Select CEGUI_BUILD_SUFFIX" FORCE)
set(CEGUI_BUILD_TESTS OFF CACHE BOOL "Select CEGUI_BUILD_TESTS" FORCE)

set(CEGUI_BUILD_RENDERER_OPENGL ON CACHE BOOL "Select CEGUI_BUILD_RENDERER_OPENGL" FORCE)
set(CEGUI_BUILD_RENDERER_OPENGL3 ON CACHE BOOL "Select CEGUI_BUILD_RENDERER_OPENGL3" FORCE)
set(CEGUI_BUILD_RENDERER_OGRE OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_OGRE" FORCE)
set(CEGUI_BUILD_RENDERER_IRRLICHT OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_IRRLICHT" FORCE)
set(CEGUI_BUILD_RENDERER_DIRECTFB OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_DIRECTFB" FORCE)
set(CEGUI_BUILD_RENDERER_DIRECT3D9 OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_DIRECT3D9" FORCE)
set(CEGUI_BUILD_RENDERER_DIRECT3D10 OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_DIRECT3D10" FORCE)
set(CEGUI_BUILD_RENDERER_DIRECT3D11 OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_DIRECT3D11" FORCE)
set(CEGUI_BUILD_RENDERER_NULL OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_NULL" FORCE)
set(CEGUI_BUILD_RENDERER_OPENGLES OFF CACHE BOOL "Select CEGUI_BUILD_RENDERER_OPENGLES" FORCE)

set(CEGUI_BUILD_XMLPARSER_EXPAT OFF CACHE BOOL "Select CEGUI_BUILD_XMLPARSER_EXPAT" FORCE)
set(CEGUI_BUILD_XMLPARSER_XERCES OFF CACHE BOOL "Select CEGUI_BUILD_XMLPARSER_XERCES" FORCE)
set(CEGUI_BUILD_XMLPARSER_LIBXML2 OFF CACHE BOOL "Select CEGUI_BUILD_XMLPARSER_LIBXML2" FORCE)
set(CEGUI_BUILD_XMLPARSER_RAPIDXML ON CACHE BOOL "Select CEGUI_BUILD_XMLPARSER_RAPIDXML" FORCE)
set(CEGUI_BUILD_XMLPARSER_TINYXML OFF CACHE BOOL "Select CEGUI_BUILD_XMLPARSER_TINYXML" FORCE)
set(CEGUI_OPTION_DEFAULT_XMLPARSER "RapidXMLParser")

set(CEGUI_BUILD_IMAGECODEC_SILLY OFF CACHE BOOL "Select CEGUI_BUILD_IMAGECODEC_SILLY" FORCE)
set(CEGUI_BUILD_IMAGECODEC_DEVIL OFF CACHE BOOL "Select CEGUI_BUILD_IMAGECODEC_DEVIL" FORCE)
set(CEGUI_BUILD_IMAGECODEC_FREEIMAGE OFF CACHE BOOL "Select CEGUI_BUILD_IMAGECODEC_FREEIMAGE" FORCE)
set(CEGUI_BUILD_IMAGECODEC_CORONA OFF CACHE BOOL "Select CEGUI_BUILD_IMAGECODEC_CORONA" FORCE)

set(CEGUI_BUILD_IMAGECODEC_STB ON CACHE BOOL "Select ImageCodec STB" FORCE)

set(CEGUI_BUILD_IMAGECODEC_TGA OFF CACHE BOOL "Select CEGUI_BUILD_IMAGECODEC_TGA" FORCE)
set(CEGUI_BUILD_IMAGECODEC_PVR OFF CACHE BOOL "Select CEGUI_BUILD_IMAGECODEC_PVR" FORCE)
set(CEGUI_OPTION_DEFAULT_IMAGECODEC "STBImageCodec")

set(CEGUI_STATIC_IMAGECODEC_MODULE ON CACHE BOOL "Select CEGUI_STATIC_IMAGECODEC_MODULE" FORCE)

set(CEGUI_BUILD_LUA_MODULE OFF CACHE BOOL "Select CEGUI_BUILD_LUA_MODULE" FORCE)
set(CEGUI_BUILD_LUA_GENERATOR OFF CACHE BOOL "Select CEGUI_BUILD_LUA_GENERATOR" FORCE)
set(CEGUI_OPTION_SAFE_LUA_MODULE OFF CACHE BOOL "Select CEGUI_OPTION_SAFE_LUA_MODULE" FORCE)
set(CEGUI_BUILD_PYTHON_MODULES OFF CACHE BOOL "Select CEGUI_BUILD_PYTHON_MODULES" FORCE)

set(CEGUI_SAMPLES_ENABLED OFF CACHE BOOL "Select CEGUI_SAMPLES_ENABLED" FORCE)
set(CEGUI_SAMPLES_USE_OPENGL OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_OPENGL" FORCE)
set(CEGUI_SAMPLES_USE_OPENGL3 OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_OPENGL3" FORCE)
set(CEGUI_SAMPLES_USE_OGRE OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_OGRE" FORCE)
set(CEGUI_SAMPLES_USE_IRRLICHT OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_IRRLICHT" FORCE)
set(CEGUI_SAMPLES_USE_DIRECTFB OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_DIRECTFB" FORCE)
set(CEGUI_SAMPLES_USE_DIRECT3D9 OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_DIRECT3D9" FORCE)
set(CEGUI_SAMPLES_USE_DIRECT3D10 OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_DIRECT3D10" FORCE)
set(CEGUI_SAMPLES_USE_DIRECT3D11 OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_DIRECT3D11" FORCE)
set(CEGUI_SAMPLES_USE_GTK2 OFF CACHE BOOL "Select CEGUI_SAMPLES_USE_GTK2" FORCE)

set(CEGUI_INSTALL_WITH_RPATH OFF CACHE BOOL "Select CEGUI_INSTALL_WITH_RPATH" FORCE)

set(CEGUI_APPLE_DYLIB_INSTALL_PATH "@executable_path/../Frameworks")
set(CEGUI_APPLE_SYMLINK_DEPENDENCIES_TO_SAMPLE_APPS OFF CACHE BOOL "Select CEGUI_APPLE_SYMLINK_DEPENDENCIES_TO_SAMPLE_APPS" FORCE)
set(CEGUI_APPLE_DYLIB_SET_VERSION_INFO OFF CACHE BOOL "Select CEGUI_APPLE_DYLIB_SET_VERSION_INFO" FORCE)

set(CEGUI_MSVC_STATIC_RUNTIME OFF CACHE BOOL "Select CEGUI_MSVC_STATIC_RUNTIME" FORCE)

set(CEGUI_MODULE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib" CACHE PATH "Select CEGUI_MODULE_INSTALL_DIR" FORCE)

add_subdirectory(CEGUI.git)
